# text2emoji

./: Makefile  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: code-reviewer.md  doc-writer.md  swe-backend.md
app/: Dockerfile  main.py  pyproject.toml  server.py  utils.py
app/api/: routes_chat.py  routes_pixlpal.py  routes_tokens.py
app/core/: config.py  database.py  gemini.py
app/models/: schemas.py
app/prompts/: bratty_answer.txt  composer.py  golden_retriever_answer.txt  system_prompt_created.txt
app/services/: boundary.py  chat.py  personality.py  tokens.py
docs/: CURRENT_STATE.md  MVP_PLAN.md  PIXLPAL_PRD.md
harness-wiki/: .env.example  .gitignore  CLAUDE.md  README.md  agent.py  program.md  pyproject.toml
harness-wiki/harness_wiki/: __init__.py  cli.py  runner.py  wiki.py
harness-wiki/meta/: runner.py
harness-wiki/tasks/example-task/: instruction.md  task.toml
harness-wiki/tasks/example-task/environment/files/: input.txt
harness-wiki/tasks/example-task/tests/: test.sh
harness-wiki/tasks/pixlpal-boundary-enforcement/: instruction.md  task.toml
harness-wiki/tasks/pixlpal-boundary-enforcement/environment/files/: interactions.json
harness-wiki/tasks/pixlpal-boundary-enforcement/tests/: test.sh
harness-wiki/tasks/pixlpal-emoji-translation/: instruction.md  task.toml
harness-wiki/tasks/pixlpal-emoji-translation/environment/files/: raw_responses.txt
harness-wiki/tasks/pixlpal-emoji-translation/tests/: test.sh
harness-wiki/tasks/pixlpal-personality-response/: instruction.md  task.toml
harness-wiki/tasks/pixlpal-personality-response/environment/files/: prompts.json
harness-wiki/tasks/pixlpal-personality-response/tests/: test.sh
prompts/fragments/: intro.txt
tests/: conftest.py  test_chat.py  test_chat_parser.py  test_composer.py  test_health.py  test_pixlpal.py  test_property.py  test_service_chat.py  test_service_personality.py  test_service_tokens.py  test_tokens.py
(+6 files in other folders)
